Fix spacing among sections in Home

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -52,9 +52,14 @@ main {
     display: flex;
     flex-direction: column;
     gap: 56px;
+
     h3 {
       text-align: center;
     }
+  }
+
+  .projects {
+    padding: 6rem 0;
   }
 }
 
