--- a/src/app/tools/tools.component.scss
+++ b/src/app/tools/tools.component.scss
@@ -3,7 +3,7 @@ section {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  min-height: 80vh;
+  min-height: 50vh;
   gap: 56px;
 
   ul {
@@ -36,6 +36,7 @@ section {
 
 @media (min-width: 640px) {
   section {
+    min-height: 80vh;
     ul {
       grid-template-columns: repeat(4, 100px);
       li {
